--- a/Weakness/index.html
+++ b/Weakness/index.html
@@ -9,7 +9,7 @@
         <script src="scripts/animate.js"></script>
         <script src="scripts/tkj.js"></script>
         <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
-        <link href="styles/main.css" rel="stylesheet" />
+        <link href="styles/tkj.css" rel="stylesheet" />
     </head>
     <body id="body">
         <!-- menu -->
