• fixed Shadow of Death, Freeze, and Frost
• menu button active state fix
• config xml updates

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <header data-role="header">
                 <div data-role="navbar">
                     <!--data-icon="custom" -->
-                    <a class="list" data-role="button" data-align="left" data-click="btnMenu_Click" data-rel="slidemenu"><img src="images/proc/white16.png" width="16" height="16" /></a>
+                    <a class="menuButton" data-role="button" data-align="left" data-click="btnMenu_Click" data-rel="slidemenu"><img src="images/proc/white16.png" width="16" height="16" /></a>
                     <span data-role="view-title" data-align="center"></span>
                 </div>
             </header>
@@ -36,7 +36,7 @@
         <div data-role="layout" data-id="abyssea-blue" data-show="master_Show">
             <header data-role="header">
                 <div data-role="navbar">
-                    <a class="list" data-role="button" data-align="left" data-click="btnMenu_Click" data-rel="slidemenu"><img src="images/proc/white16.png" width="16" height="16" /></a>
+                    <a class="menuButton" data-role="button" data-align="left" data-click="btnMenu_Click" data-rel="slidemenu"><img src="images/proc/white16.png" width="16" height="16" /></a>
                     <span data-role="view-title" data-align="center"></span>
                 </div>
             </header>
@@ -51,7 +51,7 @@
         <div data-role="layout" data-id="voidwatch" data-show="master_Show">
             <header data-role="header">
                 <div data-role="navbar">
-                    <a class="list" data-role="button" data-align="left" data-click="btnMenu_Click" data-rel="slidemenu"><img src="images/proc/white16.png" width="16" height="16" /></a>
+                    <a class="menuButton" data-role="button" data-align="left" data-click="btnMenu_Click" data-rel="slidemenu"><img src="images/proc/white16.png" width="16" height="16" /></a>
                     <span data-role="view-title" data-align="center"></span>
                 </div>
             </header>
