--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Weakness</title>
+    <base href="/" />
     <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src * ionic: 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' data: ionic: *; style-src 'self' 'unsafe-inline' *; media-src * ionic:; img-src * 'self' blob: data: http: https: ionic:; frame-src http: https: blob: data: gap: cdvfile: ionic:; object-src http: https: blob: data: ionic:; connect-src *; font-src data: *">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
 
     <link rel="icon" type="image/png" href="assets/imgs/icon.png">
-    <link rel="manifest" href="manifest.json">
+    <!--<link rel="manifest" href="manifest.json">-->
     <meta name="theme-color" content="#4e8ef7">
 
     <!-- add to homescreen for ios -->
