--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,9 @@
 ﻿<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <script data-ionic="inject">
+    (function(w){var i=w.Ionic=w.Ionic||{};i.version='3.9.9';i.angular='5.0.0';i.staticDir='build/';})(window);
+  </script>
     <meta charset="UTF-8">
     <title>Weakness</title>
     <base href="/" />
