--- a/src/pages/dynamis/dynamis.html
+++ b/src/pages/dynamis/dynamis.html
@@ -5,7 +5,7 @@
         </ion-buttons>
         <ion-title>Dynamis {{title}}</ion-title>
         <ion-buttons right>
-            <button ion-button click="timer()">{{ffxi.vanatime}}</button>
+            <button ion-button outline small (click)="timer()" [innerHTML]="ffxi.vanatime"></button>
         </ion-buttons>
     </ion-navbar>
 </ion-header>
@@ -21,53 +21,55 @@
         </ion-list>
     </ng-container>
     <ng-container *ngSwitchCase="'ordelle'">
-        <ion-list *ngFor="let group of ffxi.dynamis.ordelle">
+        <ion-list *ngFor="let group of ordelle">
             <ion-list-header>
                 <span [innerHTML]="group.title"></span>
             </ion-list-header>
             <ion-item *ngFor="let item of group.items">
-                <span [innerHTML]="item.zone"></span><ion-note item-end>{{item.mob}}</ion-note>
+                <span [innerHTML]="item.mob"></span><ion-note item-end>{{item.zone}}</ion-note>
             </ion-item>
         </ion-list>
     </ng-container>
     <ng-container *ngSwitchCase="'tukuku'">
-        <ion-list *ngFor="let group of ffxi.dynamis.tukuku">
+        <ion-list *ngFor="let group of tukuku">
             <ion-list-header>
                 <span [innerHTML]="group.title"></span>
             </ion-list-header>
             <ion-item *ngFor="let item of group.items">
-                <span [innerHTML]="item.zone"></span><ion-note item-end>{{item.mob}}</ion-note>
+                <span [innerHTML]="item.mob"></span><ion-note item-end>{{item.zone}}</ion-note>
             </ion-item>
         </ion-list>
     </ng-container>
     <ng-container *ngSwitchCase="'byne'">
-        <ion-list *ngFor="let group of ffxi.dynamis.byne">
+        <ion-list *ngFor="let group of byne">
             <ion-list-header>
                 <span [innerHTML]="group.title"></span>
             </ion-list-header>
             <ion-item *ngFor="let item of group.items">
-                <span [innerHTML]="item.zone"></span><ion-note item-end>{{item.mob}}</ion-note>
+                <span [innerHTML]="item.mob"></span><ion-note item-end>{{item.zone}}</ion-note>
             </ion-item>
         </ion-list>
     </ng-container>
 </ion-content>
 <ion-footer>
-    <ion-segment [(ngModel)]="type">
-        <ion-segment-button value="beastmen">
-            <img src="../assets/images/type/beastmen.png" />
-            <ion-label>Beastmen</ion-label>
-        </ion-segment-button>
-        <ion-segment-button value="ordelle">
-            <img src="../assets/images/currency/ordelle.png" />
-            <ion-label>O. Bronzepiece</ion-label>
-        </ion-segment-button>
-        <ion-segment-button value="tukuku">
-            <img src="../assets/images/currency/tukuku.png" />
-            <ion-label>T. Whiteshell</ion-label>
-        </ion-segment-button>
-        <ion-segment-button value="byne">
-            <img src="../assets/images/currency/byne.png" />
-            <ion-label>1 Byne Bill</ion-label>
-        </ion-segment-button>
-    </ion-segment>
+    <ion-toolbar>
+        <ion-segment [(ngModel)]="type">
+            <ion-segment-button value="beastmen" (click)="ui.link('beastmen')">
+                <img src="../assets/images/type/beastmen.png" />
+                <ion-label>Beastmen</ion-label>
+            </ion-segment-button>
+            <ion-segment-button value="ordelle" (click)="ui.link('ordelle')">
+                <img src="../assets/images/currency/ordelle.png" />
+                <ion-label>O. Bronzepiece</ion-label>
+            </ion-segment-button>
+            <ion-segment-button value="tukuku" (click)="ui.link('tukuku')">
+                <img src="../assets/images/currency/tukuku.png" />
+                <ion-label>T. Whiteshell</ion-label>
+            </ion-segment-button>
+            <ion-segment-button value="byne" (click)="ui.link('byne')">
+                <img src="../assets/images/currency/byne.png" />
+                <ion-label>1 Byne Bill</ion-label>
+            </ion-segment-button>
+        </ion-segment>
+    </ion-toolbar>
 </ion-footer>
