--- a/src/pages/voidwatch/voidwatch.html
+++ b/src/pages/voidwatch/voidwatch.html
@@ -5,7 +5,7 @@
         </ion-buttons>
         <ion-title>Voidwatch {{title}}</ion-title>
         <ion-buttons right>
-            <button ion-button outline small (click)="timer()" [innerHTML]="ffxi.vanatime"></button>
+            <button ion-button outline small (click)="ui.settings()" [innerHTML]="ffxi.vanatime"></button>
         </ion-buttons>
     </ion-navbar>
 </ion-header>
